ACS-11412 Remove UUID + add QuestionResponse